[package]
name = "foxic_factory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "foxic-factory"
path = "src/main.rs"

[dependencies]
ic-cdk = "0.5.0"
ic-cdk-macros = "0.5.0"
ic-types = "0.3.0"
ic-certified-map = "0.3.0"
candid = "0.7.14"
hex = "0.4.3"
hex-literal = "0.3.4"
itertools = "0.10.3"
serde = "1.0.136"
serde_json = "1.0.79"
serde_bytes = "0.11.5"
serde_cbor = "0.11.2"
serde_with = "1.12.0"
