[package]
name = "foxic_wallet"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "foxic-wallet"
path = "src/main.rs"

[dependencies]
ic-cdk = "0.5.0"
ic-cdk-macros = "0.5.0"
ic-types = "0.3.0"
ic-certified-map = "0.3.0"
ic-ledger-types = "0.1.2"
candid ="0.7.14"
getrandom = { version = "0.2.7", features = ["js"] }
hex = "0.4.3"
hex-literal = "0.3.4"
itertools = "0.10.3"
serde = "1.0.136"
serde_json = "1.0.79"
serde_bytes = "0.11.5"
serde_cbor = "0.11.2"
serde_with = "1.12.0"
json-rpc-types = "1.0.2"
lazy_static = "1.4.0"
bigint = "4.4.3"
